--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  width: 100%;
+  height: 12vh;
+  background-color: white;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  border-bottom: 1px solid rgb(229, 231, 235);
+  /* border: 2px solid red; */
+}
+.logos {
+  display: flex;
+}
+.navbar ul li:nth-child(1) {
+  color: rgb(29, 78, 216);
+}
+
+.logo {
+  cursor: pointer;
+  margin-left: 15px;
+}
+.GeekFoods {
+  margin-left: 10px;
+  font-size: 25px;
+  font-weight: 600;
+  cursor: pointer;
+}
+ul {
+  font-weight: 600;
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  cursor: pointer;
+}
+ul li:hover {
+  color: rgb(29, 78, 216);
+}
+
+.btn {
+  margin-right: 2rem;
+  /* border: 2px solid red; */
+}
+.getStarted {
+  padding: 10px;
+  border: none;
   color: white;
+  font-weight: 600;
+  background-color: rgb(29, 78, 216);
+  border-radius: 5px;
+  cursor: pointer;
+  border: 1px solid black;
+}
+.getStarted:hover {
+  background-color: rgb(22, 63, 174);
 }
 
-.App-link {
-  color: #61dafb;
+.lists ul{
+  width: 85%;
+  margin: 5rem;
+  margin-left: 7rem;
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
+  padding-bottom: 2rem;
+  font-size: 18px;
+  cursor: default;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+ 
+}
+.lists ul:hover{
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lists ul li{
+  width: 92%;
+  margin-left: 2.4rem;
+  color: black;
+  
+}
+.lists ul li p{
+  color: rgb(107,114,128);
+  margin-top: 10px;
+}
+
+
+.main{
+  width: 100%;
+  height: 20vh;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* border: 2px solid red; */
+}
+.big{
+  width: 20%;
+  padding: 5px;
+}
+.side{
+  padding: 5px;
+  margin-left: 5px;
+}
+.allCards{
+  width: 100%;
+  /* height: 100vh; */
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+  flex-wrap: wrap;
+  /* border: 2px solid red; */
 }
